Add layout template

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,1 +1,17 @@
-{{{body}}}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <title>Cubicle</title>
+  <link href="/static/css/site.css" type="text/css" rel="stylesheet">
+  <link rel='shortcut icon' type='image/x-icon' href='/images/favicon.png' />
+</head>
+
+<body>
+    {{{body}}}
+    
+    <footer>@Cubicle: Exercise for Express.js and Handlebars</footer>
+</body>
+
+</html>
