Add about page and fix navigation

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -9,9 +9,20 @@
 </head>
 
 <body>
+  <div class="container">
+    <header>
+      <ul>
+        <li><img class="logo" src="/static/images/logo.png"></li>
+        <li><a href="/">Browse</a></li>
+        <li><a href="/cube/create">Add a Cube</a></li>
+        <li><a href="/about">About</a></li>
+      </ul>
+    </header>
+
     {{{body}}}
-    
-    <footer>@Cubicle: Exercise for Express.js and Handlebars</footer>
+  </div>
+
+  <footer>@Cubicle: Exercise for Express.js and Handlebars</footer>
 </body>
 
 </html>
