--- a/src/views/accessory/attach.hbs
+++ b/src/views/accessory/attach.hbs
@@ -1,8 +1,8 @@
 <main>
     <h1>Attach a new accessory</h1>
     <div class="form">
-        <h2>Rubiks Cube</h2>
-        <img class="cube" src="https://images-na.ssl-images-amazon.com/images/I/71WS9kb-JFL._SL1300_.jpg">
+        <h2>{{cube.name}}</h2>
+        <img class="cube" src="{{cube.imageUrl}}">
         <form action="" method="">
             <label for="accessory">Accessories</label>
             <select id="accessory" name="accessory" />
@@ -16,6 +16,6 @@
         </form>
         <h3 class="italic">This cube has all available accessories so far or there is no available at all...
         </h3>
-        <a class="btn" href="#">Back</a>
+        <a class="btn" href="/cube/{{cube._id}}/details">Back</a>
     </div>
 </main>
