--- a/src/views/accessory/attach.hbs
+++ b/src/views/accessory/attach.hbs
@@ -5,15 +5,17 @@
         <img class="cube" src="{{cube.imageUrl}}">
         <form method="POST">
             <label for="accessory">Accessories</label>
-            <select id="accessory" name="accessory" />
-                {{#each accessories}}
-                    <option value="{{_id}}">{{name}}</option>
-                {{/each}}
-            </select>
+            {{#if accessories}}
+                <select id="accessory" name="accessory" />
+                    {{#each accessories}}
+                        <option value="{{_id}}">{{name}}</option>
+                    {{/each}}
+                </select>
+            {{else}}
+                <h3 class="italic">This cube has all available accessories so far or there is no available at all...</h3>
+            {{/if}}
             <input type="submit" value="Attach">
         </form>
-        <h3 class="italic">This cube has all available accessories so far or there is no available at all...
-        </h3>
-        <a class="btn" href="/cube/{{cube._id}}/details">Back</a>
+        <a class="btn" href="/cube/details/{{cube._id}}">Back</a>
     </div>
 </main>
