--- a/src/views/accessory/attach.hbs
+++ b/src/views/accessory/attach.hbs
@@ -14,7 +14,7 @@
             {{else}}
                 <h3 class="italic">This cube has all available accessories so far or there is no available at all...</h3>
             {{/if}}
-            <input type="submit" value="Attach">
+            <input type="submit" value="Attach" {{#unless accessories}}disabled{{/unless}}>
         </form>
         <a class="btn" href="/cube/details/{{cube._id}}">Back</a>
     </div>
