--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -2,28 +2,31 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Cubicle</title>
-  <link href="/static/css/site.css" type="text/css" rel="stylesheet">
-  <link rel='shortcut icon' type='image/x-icon' href='/static/images/favicon.png' />
+    <meta charset="UTF-8">
+    <title>Cubicle</title>
+    <link href="/static/css/site.css" type="text/css" rel="stylesheet">
+    <link rel='shortcut icon' type='image/x-icon' href='/static/images/favicon.png' />
 </head>
 
 <body>
-  <div class="container">
-    <header>
-      <ul>
-        <li><img class="logo" src="/static/images/logo.png"></li>
-        <li><a href="/">Browse</a></li>
-        <li><a href="/cube/create">Add a Cube</a></li>
-        <li><a href="/accessory/create">Add Accessory</a></li>
-        <li><a href="/about">About</a></li>
-      </ul>
-    </header>
+    <div class="container">
+        <header>
+            <ul>
+                <li><img class="logo" src="/static/images/logo.png"></li>
+                <li><a href="/">Browse</a></li>
+                <li><a href="/cube/create">Add a Cube</a></li>
+                <li><a href="/accessory/create">Add Accessory</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/auth/login">Login</a></li>
+                <li><a href="/auth/register">Register</a></li>
+                <li><a href="/logout">Logout</a></li>
+            </ul>
+        </header>
 
-    {{{body}}}
-  </div>
+        {{{body}}}
+    </div>
 
-  <footer>@Cubicle: Exercise for Express.js and Handlebars</footer>
+    <footer>@Cubicle: Exercise for Express.js and Handlebars</footer>
 </body>
 
 </html>
