--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -11,15 +11,20 @@
 <body>
     <div class="container">
         <header>
-            <ul>
+            <ul> 
                 <li><img class="logo" src="/static/images/logo.png"></li>
                 <li><a href="/">Browse</a></li>
-                <li><a href="/cube/create">Add a Cube</a></li>
-                <li><a href="/accessory/create">Add Accessory</a></li>
                 <li><a href="/about">About</a></li>
-                <li><a href="/auth/login">Login</a></li>
-                <li><a href="/auth/register">Register</a></li>
-                <li><a href="/logout">Logout</a></li>
+                
+                {{#if user}}
+                    <li><a href="/cube/create">Add a Cube</a></li>
+                    <li><a href="/accessory/create">Add Accessory</a></li>
+                    <li><a href="/auth/logout">Logout</a></li>
+                {{else}}
+                    <li><a href="/auth/login">Login</a></li>
+                    <li><a href="/auth/register">Register</a></li>
+                {{/if}}
+                
             </ul>
         </header>
 
